just small change

--- a/Todo.css
+++ b/Todo.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: darkblue;
+    background-color: palevioletred;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,7 +9,7 @@ body {
 }
 
 .todo-container {
-    background-color:black;
+    background-color: pink;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -19,7 +19,7 @@ body {
 
 h1 {
     text-align: center;
-    color: white;
+    color: black;
 }
 
 .input-container {
